<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <EditText
        android:id="@+id/search_toLongitude"
        android:layout_width="98dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/edit_endinglongitude"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_fromLongitude"
        app:layout_constraintStart_toEndOf="@+id/search_fromLongitude" />

    <EditText
        android:id="@+id/search_toLatitude"
        android:layout_width="98dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/edit_endinglatitude"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_fromLatitude"
        app:layout_constraintStart_toEndOf="@+id/search_fromLatitude" />

    <EditText
        android:id="@+id/search_fromLongitude"
        android:layout_width="98dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/edit_startinglongitude"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <EditText
        android:id="@+id/search_fromLatitude"
        android:layout_width="98dp"
        android:layout_height="46dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_startinglatitude"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/search_by_location" />

    <EditText
        android:id="@+id/search_toDate"
        android:layout_width="194dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="yyyyMMdd_hhmmss"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/search_by_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/text_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/search_Captions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/edit_caption"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_by_caption" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="184dp"
        android:onClick="searchCaption"
        android:text="@string/button_searchcaption"
        app:layout_constraintStart_toEndOf="@+id/search_toDate"
        app:layout_constraintTop_toBottomOf="@+id/search_Captions" />

    <TextView
        android:id="@+id/search_by_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:hint="@string/text_time"
        android:text="From"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_Captions" />

    <EditText
        android:id="@+id/search_fromDate"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="yyyyMMdd_hhmmss"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_by_date" />

    <TextView
        android:id="@+id/search_by_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/text_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_toDate" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/text_latitude"
        app:layout_constraintBaseline_toBaselineOf="@+id/search_fromLatitude"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:hint="@string/text_longitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="56dp"
        android:layout_height="26dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:text="To"
        app:layout_constraintStart_toStartOf="@+id/search_fromDate"
        app:layout_constraintTop_toBottomOf="@+id/search_fromDate" />

</androidx.constraintlayout.widget.ConstraintLayout>